# AeroStabilize-1D

./: .gitignore  CMakeLists.txt  config.txt
include/: Config.hpp  PIDController.hpp  PerformanceAnalyzer.hpp  PhysicsEngine.hpp  TelemetryLogger.hpp  Vector2D.hpp
scripts/: live_dashboard.py  plot_flight.py
src/: Config.cpp  PIDController.cpp  PerformanceAnalyzer.cpp  PhysicsEngine.cpp  TelemetryLogger.cpp  main.cpp
tests/: CMakeLists.txt  test_analyzer.cpp  test_config.cpp  test_physics.cpp  test_pid.cpp
